--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </tr>
     </table>
     <div>
-        <a href="ContactUs.html">ContactUs using only Html</a>
+        <a href="Contact/ContactUs.html">ContactUs using only Html</a>
     </div>
 </body>
 </html>
