--- a/index.html
+++ b/index.html
@@ -48,5 +48,27 @@
     <div>
         <a href="Contact/ContactUs.html">ContactUs using only Html</a>
     </div>
+
+
+    <table border="1" style="border-collapse:collapse;">
+        <tr style="padding: 10px 20px;">
+            <th style="background-color: green;">Col 1</th>
+            <th style="background-color: yellow;">Col 2</th>
+            <th style="background-color: green;">Col 3</th>
+            <th style="background-color: red;">Col 4</th>
+            <th style="background-color: yellow;">Col 5</th>
+        </tr>
+        <tr>
+            <td rowspan="2"> 1 </td>
+            <td rowspan="5"> 2 </td>
+            <td rowspan="5"> 3 </td>
+            <td rowspan="5"> 4 </td>
+            <td rowspan="5"> 5 </td>
+        </tr>
+        <colgroup>
+        <col span="2" style="background-color: green;">
+        </colgroup>
+
+    </table>
 </body>
 </html>
