--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </table>
     <div>
         <a href="Contact/ContactUs.html">ContactUs using only Html</a>
+        <a href="htmlDebugger.html">HTML debugging problem</a>
     </div>
 
 
