--- a/index.html
+++ b/index.html
@@ -47,10 +47,12 @@
     </table>
     <div>
         <a href="Contact/ContactUs.html">ContactUs using only Html</a>
+    </div>
+    <div>
         <a href="htmlDebugger.html">HTML debugging problem</a>
     </div>
 
-
+<br>
     <table border="1" style="border-collapse:collapse;">
         <tr style="padding: 10px 20px;">
             <th style="background-color: green;">Col 1</th>
